# ChangeLog for app-misc/lirc
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/lirc/ChangeLog,v 1.179 2008/05/19 12:10:52 zzam Exp $

*lirc-0.8.3-r2 (19 May 2008)

  19 May 2008; Matthias Schwarzott <zzam@gentoo.org> +files/modprobed.lirc,
  +lirc-0.8.3-r2.ebuild:
  Removed old syntax from modprobe config file.

*lirc-0.8.3-r1 (10 May 2008)

  10 May 2008; Steve Dibb <beandog@gentoo.org> +lirc-0.8.3-r1.ebuild:
  Check for MODULE_UNLOAD in kernel

  05 May 2008; Matthias Schwarzott <zzam@gentoo.org> lirc-0.8.3.ebuild:
  Adding hack to stop portage from deleting lircd.conf.

*lirc-0.8.3 (05 May 2008)

  05 May 2008; Matthias Schwarzott <zzam@gentoo.org> +files/lircd-0.8.3,
  +files/lirc-0.8.3-imon-pad2keys.patch, +lirc-0.8.3.ebuild:
  Version bumped. Init-script changes: Now provide lirc, Bug #190669. Use
  pidfile to allow starting more than one lircd, Bug #212551. This may also
  fix the Kernel Oops of Bug #218612. Fixed keys in imon-pad2keys config,
  Bug #219101. Do install all avail remote config files to
  /usr/share/lirc/remotes and skip the auto-preserving of the old conf-file,
  Bug #219097.

  04 May 2008; Matthias Schwarzott <zzam@gentoo.org> lirc-0.8.3_pre3.ebuild:
  Added imon_knob to possible LIRC_DEVICES, Bug #208719.

*lirc-0.8.3_pre3 (28 Apr 2008)

  28 Apr 2008; Matthias Schwarzott <zzam@gentoo.org>
  +files/lirc-0.8.3_pre3-imon-pad2keys.patch, +lirc-0.8.3_pre3.ebuild:
  Version bumped. Create /etc/modprobe.d instead of /etc/modules.d, Bug
  #214019.

  16 Apr 2008; Markus Rothe <corsair@gentoo.org> lirc-0.8.3_pre1.ebuild:
  Stable on ppc64; bug #208433

  28 Mar 2008; Markus Meier <maekke@gentoo.org> lirc-0.8.3_pre1.ebuild:
  amd64 stable, bug #208433

  06 Feb 2008; nixnut <nixnut@gentoo.org> lirc-0.8.3_pre1.ebuild:
  stable on ppc wrt bug #208433

  01 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  lirc-0.8.3_pre1.ebuild: