@@ -47,16 +47,16 @@ EBUILD lirc-0.8.2-r2.ebuild 8282 RMD160 627a3bb4a947ea89fd90a4c93cac12f1358976ff
 EBUILD lirc-0.8.2.ebuild 7749 RMD160 15289a7b2c51dcf4c32c399b16861f5e73c30965 SHA1 9338e58f0351a7eab10837b07253c4b5be6eeb6d SHA256 de6312c8bc46974d99c73f958843f2c143994ed68c18cc964d30aa1405c94998
 EBUILD lirc-0.8.2_pre2.ebuild 7768 RMD160 2437273d778a5ba426026aaafab4e2528c4619e6 SHA1 ad1d97b3110636f3733c46318cd54fc1f08a8549 SHA256 b35bdae2c7011fb84d2279d12de811dbc128266d197f83e4bb70bb9e5c8ec67b
 EBUILD lirc-0.8.3-r1.ebuild 8698 RMD160 b108d0316377d6a4e11fd5d9fab4cc5e02e65662 SHA1 438475aa6bc91aa204c0156ed9c0341bd7ca6804 SHA256 c70eae35c30e23c2433147a0d68aa24ae0737355735eae204ce4372bb07f3cbd
-EBUILD lirc-0.8.3-r2.ebuild 8696 RMD160 5dcb8aabd131c327f5f7404a1a02d48ca9dba7e6 SHA1 471b8304da5893ce38aa1d2f926206f8ca3b9d2a SHA256 7b1c8344f0dad45dc9383e399a0d858a0459ad98e79c4823ca6bf411652f9073
+EBUILD lirc-0.8.3-r2.ebuild 8714 RMD160 9f8c7e3244279a9e2784c4de0bd5cbe17ba34cce SHA1 f762a1e56a63e0fcf34d2f315f22ad954a30c304 SHA256 a71046cae5f87aa9e9a072baf0ed020a0404d36a6a86acd0c6ec862d0f39824f
 EBUILD lirc-0.8.3.ebuild 8652 RMD160 fdc60c58f390233998f6ec6e1d6fd6086816f270 SHA1 e1aeadecc5e690b5bcd08c547c93e03c715c0524 SHA256 c8270e080d2b5f1cea016b5a9cf12589c11ce1e18d4480a981a93c6d94fdb844
 EBUILD lirc-0.8.3_pre1.ebuild 8413 RMD160 5c1aad354c21af1c0e59a7664a618b4f845e4807 SHA1 b60cfb14611ba87df67cde41070f7c3b90e467a5 SHA256 aa2c154981ed8998d701e74744a73f84a758c2cfb69b2a4a07e2b6d42d75e932
 EBUILD lirc-0.8.3_pre3.ebuild 8326 RMD160 126919dbe2680331d22682df852b5e5636c8709b SHA1 77751b8e0dc6b5661e4def741c7118aeef19baf8 SHA256 6669f8b4a107c1952c28bc56173540a4e2075eb652d8b7c81e7c99afac11dd2c
-MISC ChangeLog 27867 RMD160 ce1467488117cf9afc796c64d2d789bcb44cc699 SHA1 e929c262aeba718d3922a1ba049ec920e156c6ca SHA256 0d450a2facaa308067904d909dfac62e2c06f85ec162fd5716243ecf509b6723
+MISC ChangeLog 28045 RMD160 57324bdcb141b83e87b463c67edb6aa66c472228 SHA1 86477dc17f596930d9d2245957b36b8222625804 SHA256 4e52ac9043dc573d7ffb9fcc2c4cffc8875fe2e314d1c1659c34f9a194a87020
 MISC metadata.xml 162 RMD160 8bd24f9f2805b005cef731c0cda868c72e6980af SHA1 7464d1657179a3f30c5ea2ad401590e4489ac945 SHA256 aaad144c69dd58781e1dc97b5fbad08a5b4db504bd3cbbb4ab27018a307d5d81
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkgxblUACgkQt2vP6XvVdOcGUwCgozUEibVsRCvBqDYsMKIFI4EI
-U0wAnidkiHYEcfOM+oWWXai3xceTj2Zd
-=r2sH
+iEYEARECAAYFAkhJmD0ACgkQt2vP6XvVdOdNSQCcCRiSeG9oN1yFqXLLMDms6j2j
+R1UAnikiZ2kKGiocFX3tzEoMX260rgqj
+=uAWx
 -----END PGP SIGNATURE-----
