@@ -1,6 +1,10 @@
 # ChangeLog for app-misc/lirc
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/lirc/ChangeLog,v 1.179 2008/05/19 12:10:52 zzam Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/lirc/ChangeLog,v 1.180 2008/06/06 20:04:01 zzam Exp $
+
+  06 Jun 2008; Matthias Schwarzott <zzam@gentoo.org> lirc-0.8.3-r2.ebuild:
+  Added imon_lcd to list of possible lirc_devices, thanks to Jan Paesmans
+  <jan.paesmans@gmail.com>.
 
 *lirc-0.8.3-r2 (19 May 2008)
 
